--- a/ProyectoProgram/Web.config
+++ b/ProyectoProgram/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProyectoProgram-20171008040322.mdf;Initial Catalog=aspnet-ProyectoProgram-20171008040322;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SistemaContableEntities" connectionString="metadata=res://*/Models.SistemaBDS.csdl|res://*/Models.SistemaBDS.ssdl|res://*/Models.SistemaBDS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JP9V5G3\SQLEXPRESS;initial catalog=SistemaContable;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SistemaContableEntities1" connectionString="metadata=res://*/Models.SistemaBDS.csdl|res://*/Models.SistemaBDS.ssdl|res://*/Models.SistemaBDS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JP9V5G3\SQLEXPRESS;initial catalog=SistemaContable;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
